# db-hive

./: .gitignore  CHANGELOG.md  CLAUDE.md  MILESTONE_3.9_REPORT.md  MILESTONE_3.9_SUMMARY.md  README.md  index.html  package.json  redesign.md  vite.config.ts
docs/: E2E_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  RELEASE_NOTES_v0.1.0-mvp.md  USER_GUIDE.md  base-plan.md  code-signing.md  competitive-analysis-dbpro.md  connection-wizard-design.md  difficulty.md  implementation-roadmap.backup.md  implementation-roadmap.md  plugin-development.md  query-components-architecture.md  tanstack-router-implementation-plan.md  (+2 more)
src-tauri/: Cargo.toml  query_results.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: anthropic.rs  google.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  provider.rs
src-tauri/src/commands/: activity.rs  ai.rs  backup.rs  connection.rs  data_import.rs  ddl.rs  export.rs  history.rs  migrations.rs  mod.rs  monitoring.rs  plugins.rs  procedures.rs  query.rs  schema.rs  settings.rs  window.rs
src-tauri/src/credentials/: mod.rs
src-tauri/src/ddl/: mod.rs  mysql.rs  postgres.rs  sqlite.rs  sqlserver.rs
src-tauri/src/drivers/: mod.rs  mongodb.rs  mysql.rs  postgres.rs  redis.rs  sqlite.rs  sqlserver.rs  turso.rs
src-tauri/src/migrations/: diff.rs  mod.rs  sql_gen.rs
src-tauri/src/models/: activity.rs  backup.rs  connection.rs  ddl.rs  error.rs  history.rs  metadata.rs  mod.rs  settings.rs
src-tauri/src/plugins/: api.rs  loader.rs  manager.rs  mod.rs  runtime.rs  sandbox.rs
src-tauri/src/plugins/js/: dbhive_api.js
src-tauri/src/ssh/: mod.rs
src-tauri/src/state/: activity_logger.rs  mod.rs
(+205 files in other folders)
