[package]
name = "db-hive"
version = "0.7.0"
description = "A Tauri App"
authors = ["KwaminaWhyte"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "db_hive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
tokio-postgres = { version = "0.7", features = [
        "with-uuid-1",
        "with-chrono-0_4",
        "with-serde_json-1",
] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-store = "2.4.1"
tauri-plugin-dialog = "2.4.2"
rusqlite = { version = "0.37.0", features = ["bundled"] }
mysql_async = "0.36.1"
mongodb = "3.1.0"
futures-util = "0.3"
hex = "0.4.3"
russh = "0.45"
russh-keys = "0.45"
dirs = "5.0"
keyring = "3.6"
tiberius = { version = "0.12", features = ["chrono", "native-tls", "sql-browser-tokio"], default-features = false }
tokio-util = { version = "0.7", features = ["compat"] }
regex = "1.11"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.9.0"
